--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: "3.9"
 services:
-  web:
+  nginx:
     image: nginx
     ports:
-      - "5000:80"
+      - "3000:80"
     volumes:
       - ./public:/usr/share/nginx/www/data
       - ./nginx.conf:/etc/nginx/nginx.conf
+  ftp:
+    image: delfer/alpine-ftp-server
+    ports:
+      - "2121:21"
+    environment:
+      - USERS=admin|admin|/home/admin
