--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
-version: "3.9"
+version: "3.3"
 services:
+  app:
+    image: "script"
+    build:
+      context: ./app
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./app/storage:/app/storage
+      - ./app:/app
+    working_dir: /app
+    command: python3 entry.py
+    depends_on:
+      - nginx
+      - ftp
   nginx:
     image: nginx
     ports:
@@ -7,9 +20,12 @@ services:
     volumes:
       - ./public:/usr/share/nginx/www/data
       - ./nginx.conf:/etc/nginx/nginx.conf
+
   ftp:
     image: delfer/alpine-ftp-server
     ports:
       - "2121:21"
+    volumes:
+      - ./storage:/home/admin
     environment:
       - USERS=admin|admin|/home/admin
