--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     depends_on:
       - nginx
       - ftp
+      - adminer
+      - db
   nginx:
     image: nginx
     ports:
@@ -21,11 +23,31 @@ services:
       - ./public:/usr/share/nginx/www/data
       - ./nginx.conf:/etc/nginx/nginx.conf
 
+  db:
+    image: postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - database:/var/lib/postgresql
+    environment:
+      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: admin
+      POSTGRES_DB: archivage_db
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
   ftp:
     image: delfer/alpine-ftp-server
+    restart: always
     ports:
       - "2121:21"
     volumes:
       - ./storage:/home/admin
     environment:
       - USERS=admin|admin|/home/admin
+volumes:
+  database:
