--- a/app/config.env
+++ b/app/config.env
@@ -6,3 +6,9 @@ ftp_password=admin
 ftp_server_address=ftp
 
 versioning=false
+expiration_date=2
+
+DB_HOST=db
+DB_USER=admin
+DB_PASSWORD=admin
+DB_NAME=archivage_db
