--- a/app/config.env
+++ b/app/config.env
@@ -1,12 +1,12 @@
 URL=http://nginx/
-FILE_NAME=test1.sql.zip
+FILE_NAME=empty.zip
 
 ftp_username=admin
 ftp_password=admin
 ftp_server_address=ftp
 
-versioning=false
-expiration_date=2
+VERSIONING=0
+EXPIRATION_DATE=3
 
 DB_HOST=db
 DB_USER=admin
