--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ftp
       - db
       - smtp
+
   nginx:
     image: nginx
     ports:
@@ -31,9 +32,9 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
       - database:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: admin
-      POSTGRES_USER: admin
-      POSTGRES_DB: archivage_db
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
 
   smtp:
     image: namshi/smtp
@@ -51,8 +52,8 @@ services:
     ports:
       - "2121:21"
     volumes:
-      - ./storage:/home/admin
+      - ./storage:/home/${FTP_USER}
     environment:
-      - USERS=admin|admin|/home/admin
+      - USERS=${FTP_USER}|${FTP_PASSWORD}|/home/${FTP_USER}
 volumes:
   database:
