adding logs: first version

--- a/app/.env
+++ b/app/.env
@@ -6,5 +6,7 @@ ftp_server_address=ftp
 CONFIG_PATH=../config.yml
 DB_HOST=db
 DB_USER=admin
-DB_PASSWORD=admin
+DB_PASSWORD=admin1
 DB_NAME=archivage_db
+LOGGER_NAME=app
+LOG_FILE_PATH=../logs/logs.log
