--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./app/config.yml:/app/config.yml
       - ./doc:/app/doc
+      - ./app/logs:/app/logs
     working_dir: /app
     command: ["wait-for-it", "db:5432", "--","/bin/sh", "-c","./entry.sh"]
     depends_on:
