--- a/app/config.yml
+++ b/app/config.yml
@@ -1,2 +1,10 @@
 VERSIONING: 1
 EXPIRED_IN: 1
+SMTP_PORT: 465
+SMTP_SERVER: "smtp.gmail.com"
+SMTP_PASSWORD: "tgkuspwabhnyvine"
+SMTP_MAIL_SENDER: "archivagebot@gmail.com"
+SMTP_MAIL_RECEIVERS:
+  - "ezzaimadnane1361@gmail.com"
+  - "filali_rochdi_@hotmail.fr"
+  - "omarelgribes07@gmail.com"
